# block_engine

./: CMakeLists.txt  readme.md  test.json
common/: CMakeLists.txt
common/include/: bus_types.h  nullable.h
common/include/block/: block_description.h  bus_types.h  description_framework.h
common/include/core/: core_event.h
common/include/model/: block.h  block_type_info.h  bus.h  event.h  scheme.h
common/include/validators/: scheme_validator.h
common/include/view/json/: json_scheme_parser.h
common/src/: bus.cpp  scheme.cpp
console/: CMakeLists.txt
console/src/: main.cpp
core/: CMakeLists.txt
core/include/core/: BlockSettings.h  block.h  block_factory.h  block_management_logic.h  bus.h  bus_factory.h  calc_engine.h  connector.h  core.h  core_api.h  core_error.h  core_event.h  execution_logic.h  graph.h  scheme_presenter.h  type_info.h
core/include/core/block/: block.h  console_block.h  const_block.h  limit_block.h  sum_block.h
core/include/core/blocks/: console_block.h  const_block.h  limit_block.h  sum_block.h
core/src/: block.cpp  block_factory.cpp  bus_factory.cpp  connector.cpp  core_error.cpp
core/test/: core_test.cpp
docs/: BusConnectionApi.puml  LinkEngine.puml  LinkLogic.puml  Parsing.puml
gui/: CMakeLists.txt
gui/include/: block_factory.h  block_type_info.h  blockenginewindow.h  bus_group_holder.h  bus_type_info.h  pin_group_holder.h  qblock.h  qblockenginewindow.h  qblocklist.h  qbus.h  qbusline.h  qpin.h  qschemeeditor.h  qwidgethelpers.h  scheme_editor_model.h
gui/include/gui/: block_factory.h  block_type_info.h
gui/include/scheme_editor/: camera_controller.h  qschemeeditor.h  scene_controller.h  scheme_editor_model.h
gui/src/: block_factory.cpp  block_type_info.cpp  blockenginewindow.cpp  blockenginewindow.ui  bus_group_holder.cpp  camera_controller.cpp  main.cpp  pin_group_holder.cpp  qblock.cpp  qblock.ui  qblockenginewindow.cpp  qblockenginewindow.ui  qblocklist.cpp  qbus.cpp  qbusline.cpp  qpin.cpp  qschemeeditor.cpp  scene_controller.cpp  scheme_editor_model.cpp
gui/src/scheme_editor/: qschemeeditor.cpp
include/: block.h  block_connection_policy.h  block_management_logic.h  bus.h  connector.h  graph.h  json_scheme_parser.h  link_engine.h  link_logic.h  scheme_validator.h  storage.h  sum_block.h  type_info.h
include/blocks/: console_block.h  const_block.h  sum_block.h
include/model/: scheme.h
src/: connector.cpp  link_engine.cpp  link_logic.cpp  sheme.cpp
test/: CMakeLists.txt  main.cpp  main_json.cpp
